--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstackopen_part4",
+  "name": "fullstackopen_part5",
   "version": "1.0.0",
   "description": "blogList",
   "main": "index.js",
@@ -11,7 +11,8 @@
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
     "lint": "eslint .",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node index.js"
   },
   "author": "Tjerk ten Dam",
   "license": "ISC",
